# zigme

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  test-request.py  test-ws-server.py
eventhandler/: Cargo.toml
redis-data/: dump.rdb
redis-data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
scripts/: test-request.py  test.py
web-api/: .env.example  Cargo.toml
web-api/src/: errors.rs  main.rs
web-api/src/routes/: mod.rs
web-ui/: package-lock.json  package.json  vite.config.ts
web-ui/src/lib/: store.ts
web-ui/src/params/: boolean.ts
web-ui/src/routes/: +page.server.ts  +page.svelte
web-ui/src/routes/alarm_state/: +server.ts
web-ui/src/routes/alarm_trigger/: +server.ts
web-ui/src/routes/alarmstate/[state=boolean]/: +server.ts
web-ui/src/routes/alarmtrigger/: +server.ts
zigme-api/: .env.example  Cargo.toml  Dockerfile  README.md
zigme-api/src/: db.rs  errors.rs  main copy.rs  main.rs  tracer.rs
zigme-api/src/routes/: alarm_state.rs  alarm_trigger.rs  device_state_change.rs  events.rs  logs.rs  mod.rs
zigme-eventhandler/: .dockerignore  .env.example  Cargo.toml  Dockerfile
zigme-eventhandler/src/: main copy.rs  main.rs  tracer.rs
zigme-ui/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  svelte.config.js
zigme-ui/src/: app.html  global.t.ts
zigme-ui/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
zigme-ui/src/routes/alarm_state/: +server.ts
zigme-ui/src/routes/alarm_trigger/: +server.ts
zigme-ui/src/routes/health/: +server.ts
