[package]
name = "zigme-api"
version = "0.1.0"
edition = "2021"
target = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
anyhow = "1.0.79"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }